--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <header>
         <h1>Ashley Pearson</h1>
         <nav>
-            <a href="#">About Me</a>
-            <a href="#">Work</a>
-            <a href="#">Contact Me</a>
-            <a href="#">Resume</a>
+            <a href="#about-me">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#contact-me">Contact Me</a>            
         </nav>
     </header>
 
@@ -28,18 +27,18 @@
     <main>
 
         <!-- About Me Section -->
-        <aside>
+        <aside id="about-me">
             <div id="headshot" class="headshot">
                 <img src="./assets/Images/headshot.JPG" alt="Headshot">
              <h2>About Me</h2>
-             <p>I love to be outdoors, code, read. Born in AZ. Native. I love my dog Reese. I love my family. I work for bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla  </p>
+             <p>This section is about me - I will fill in later. The end. </p>
             </div>        
         </aside>
 
         <!-- Work Section w/ Display Cards -->
-    <section class="project-section">
+    <section id="work" class="project-section">
         <div class="project-card">            
-           <a href="#">
+           <a href="https://github.com/">
                 <div>
                    <h3>Project 1</h3>
                    <p>This is my project using html.</p>
@@ -47,7 +46,7 @@
             </a>   
         </div>
         <div class="project-card">
-            <a href="#"> 
+            <a href="https://github.com/"> 
                 <div>
                    <h3>Project 2</h3>
                    <p>This is my project using css.</p>
@@ -55,7 +54,7 @@
             </a>   
         </div>
         <div class="project-card">
-            <a href="#">
+            <a href="https://github.com/">
                 <div>
                    <h3>Project 3</h3>
                    <p>This is my first project using javascript.</p>
@@ -63,7 +62,7 @@
             </a>   
         </div>
         <div class="project-card">
-            <a href="#">
+            <a href="https://github.com/">
                 <div>                
                    <h3>Project 4</h3>
                    <p>This is my first project using css.</p>
@@ -76,13 +75,13 @@
 
         <!-- Contact Me Section -->
     <footer>
+        <div id="contact-me"></div>
         <h2>Contact Me</h2>
-        <div>
-            <a href="#">Phone</a>
-            <a href="#">Email</a>
-            <a href="#">Github</a>
-            <a href="#">Twitter</a>
-            <a href="#">Spotify</a>
+        <div>            
+            <a href="https://mail.yahoo.com">Email</a>
+            <a href="https://github.com/">Github</a>
+            <a href="https://twitter.com/">Twitter</a>
+            <a href="https://open.spotify.com/">Spotify</a>
         </div>
     </footer>
 
